# advent_of_code

./: .gitignore  .pre-commit-config.yaml  README.md  l.txt  pyproject.toml  test.py
2015/python/: 1.py  10.py  11.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  utils.py
2015/rust/d1/: Cargo.toml
2015/rust/d1/src/: main.rs
2015/rust/d2/: Cargo.toml
2015/rust/d2/src/: main.rs
2015/rust/d3/: Cargo.toml
2015/rust/d3/src/: main.rs
2015/rust/d4/: Cargo.toml
2015/rust/d4/src/: main.rs
2015/rust/d5/: Cargo.toml
2015/rust/d5/src/: main.rs
2015/rust/d6/: Cargo.toml
2015/rust/d6/src/: main.rs
2015/rust/d7/: Cargo.toml
2015/rust/d7/src/: main.rs
2022/python/: 1.py  2.py  3.py  4.py  5.py  6.py  7.py  utils.py
2023/python/: 1.py  10.py  11.py  16.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  skeleton.py  test.py  utils.py
2024/python/: 1.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  utils.py
2025/python/: 1.py  10.py  11.py  12.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  utils.py
rust_utils/utils/src/: lib.rs
