[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "Env for AoC"
authors = ["miguel.brogueira <miguel.brogueira@olx.com>"]
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.dependencies]
python = "^3.11"
inflect = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
