[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "Env for AoC"
authors = ["miguel.brogueira <miguel.brogueira@olx.com>"]
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.dependencies]
python = "^3.11"
inflect = "^7.0.0"
black = "^23.11.0"
ruff = "^0.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
